# schedula

./: .dockerignore  .firebaserc  .gitignore  AGENT.md  DESIGN.md  Dockerfile  Makefile  README.md  USER_MANUAL.md  config.yaml  docker-compose.yml  firebase-config.dev.json  firebase-config.example.json  firebase.json  firestore.indexes.json  firestore.rules  flavorizr.yaml  pubspec.yaml  pyproject.toml
.firebase/: hosting.YnVpbGRcd2Vi.cache
.fvm/versions/: 3.44.0
.github/workflows/: ci.yml  deploy.yml
android/app/: build.gradle.kts  flavorizr.gradle.kts  google-services.json
data/: spa.yaml
docs/: PROJECT_MODEL_UML.md
examples/: demo_conversation.py
functions/: .gitignore  package-lock.json  package.json  tsconfig.json
functions/scripts/: auditDataConsistency.js  buildAggregateStats.js  seedMockData.js  syncTenantData.js  verifySeedData.js
functions/src/: index.ts
ios/Flutter/: devDebug.xcconfig  (+5 more)
lib/: app.dart  firebase_options.dart  firebase_options_dev.dart  firebase_options_prod.dart  firebase_options_shared.dart  firebase_options_staging.dart  flavors.dart  main.dart
resource/: Schedula_Sprint0_Setup_Guide.txt
test/: booking_bloc_test.dart  booking_create_usecase_test.dart  dashboard_stats_usecase_test.dart  widget_test.dart
tests/: _helpers.py  conftest.py  test_api.py  test_fast_path.py  test_followup.py  test_gate.py  test_grounding.py  test_intent.py  test_normalize.py  test_ocr.py  test_pipeline_e2e.py  test_slow_path.py  test_state.py  test_validate.py
tool/: bootstrap_firebase_config.dart
web/: index.html  manifest.json
(+171 files in other folders)
