[project]
name = "booking-cascade"
version = "0.1.0"
description = "Local OCR and entity extraction API for Vietnamese spa appointment messages."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pydantic>=2.6,<3",
    "dateparser>=1.2,<2",
    "rapidfuzz>=3.6,<4",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "gliner>=0.2.13,<0.3",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.29,<1",
    "python-multipart>=0.0.9,<1",
]
ocr = [
    "easyocr>=1.7,<2",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "fastapi>=0.110,<1",
    "python-multipart>=0.0.9,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/booking_cascade"]
